Fix an issue with Slick which was causing horizontal scroll on small screens

--- a/themes/modern6/css/components/article-blocks.less
+++ b/themes/modern6/css/components/article-blocks.less
@@ -1,3 +1,7 @@
+.slick-dots {
+	margin-left: 0;
+}
+
 .article-block {
 	position: relative;
 
